|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.1.7

- FPM:
  . Fixed ACL build check on MacOS. (David Carlier)
  . Fixed bug #72185: php-fpm writes empty fcgi record causing nginx 502.
    (Jakub Zelenka, loveharmful)

- OPcache:
  . Fixed bug GH-8461 (tracing JIT crash after function/method change).
    (Arnaud, Dmitry)

- SPL:
  . Fixed bug GH-8235 (iterator_count() may run indefinitely). (cmb)

- Standard:
  . Fixed bug GH-8185 (Crash during unloading of extension after dl() in ZTS).
    (Arnaud)

- Zip:
  . Fixed type for index in ZipArchive::replaceFile. (Martin Rehberger)

12 May 2022, PHP 8.1.6

- Core:
  . Fixed bug GH-8310 (Registry settings are no longer recognized). (cmb)
  . Fixed potential race condition during resource ID allocation. (ryancaicse)
  . Fixed bug GH-8133 (Preloading of constants containing arrays with enums
    segfaults). (ilutov)
  . Fixed Haiku ZTS builds. (David Carlier)

- Date:
  . Fixed bug GH-7752 (DateTimeZone::getTransitions() returns insufficient
    data). (Derick)
  . Fixed bug GH-8108 (Timezone doesn't work as intended). (Derick)
  . Fixed bug #81660 (DateTimeZone::getTransitions() returns invalid data).
    (Derick)
  . Fixed bug GH-8289 (Exceptions thrown within a yielded from iterator are
    not rethrown into the generator). (Bob)

- FFI:
  . Fixed bug GH-8433 (Assigning function pointers to structs in FFI leaks).
    (Bob)

- FPM:
  . Fixed bug #76003 (FPM /status reports wrong number of active processe).
    (Jakub Zelenka)
  . Fixed bug #77023 (FPM cannot shutdown processes). (Jakub Zelenka)
  . Fixed comment in kqueue remove callback log message. (David Carlier)

- Hash:
  . Fixed bug #81714 (segfault when serializing finalized HashContext). (cmb)

- Iconv:
  . Fixed bug GH-8218 (ob_end_clean does not reset Content-Encoding header).
    (cmb)

- Intl:
  . Fixed bug GH-8364 (msgfmt_format $values may not support references). (cmb)

- MBString: